2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/05_declaree_deux_fois.deca
// Description :
//      déclarée une variable deux fois 
// Resultats :
//    Erreur Contexteulle : fichier.deca:12:10:x est déjà déclarée
//
// Historique :
// cree le 01/01/2024

{
    int x = 2 ;

    int x = 1 ;
}